--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  background: rgb(219,219,210);
+  background: linear-gradient(0deg, rgba(219,219,210,1) 80%, rgba(0,150,136,1) 80%);
+  height: 100vh;
+}
