--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* Stile Struttura */
 body {
   background: rgb(219,219,210);
   background: linear-gradient(0deg, rgba(219,219,210,1) 80%, rgba(0,150,136,1) 80%);
@@ -23,6 +24,22 @@ header {
   height: 100px;
   position: fixed;
   background-color: #fff;
+  margin-left: 350px;
+  width: 600px;
+}
+main {
+  margin-left: 350px;
+  width: 600px;
+  height: calc(100% - 200px);
+  background-color: yellow;
+  position: absolute;
+  top: 100px;
+}
+footer {
+  height: 100px;
+  position: fixed;
+  bottom: 10%;
+  background-color: red;
   margin-left: 350px;
   width: 600px;
 }
