--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 header {
   height: 100px;
   position: fixed;
-  background-color: #fff;
+  background-color: #EAEAEA;
   margin-left: 350px;
   width: 600px;
 }
@@ -33,7 +33,7 @@ main {
   margin-left: 350px;
   width: 600px;
   height: calc(100% - 200px);
-  background-color: yellow;
+  background-image: url('../img/mine.jpg');
   position: absolute;
   top: 100px;
 }
@@ -64,14 +64,14 @@ footer {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  background-color: #B1B1B1;
+  background-color: #EAEAEA;
 }
 .avatar {
   display: flex;
   align-items: center;
 }
 .btn-icons li a {
-  padding: 4px;
+  padding: 8px;
 }
 .avatar img {
   max-width: 50px;
@@ -90,4 +90,9 @@ footer {
 .text-notify {
   margin-left: 8px;
   font-size: 14px;
+}
+.src {
+  width: 100%;
+  border-radius: 4px;
+  padding: 4px;
 }
