--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   top: 10%;
   font-family: 'Lato', sans-serif;
 
-
 }
 
 header {
@@ -27,6 +26,9 @@ header {
   background-color: #EAEAEA;
   margin-left: 350px;
   width: 600px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 main {
   margin-left: 350px;
@@ -35,12 +37,12 @@ main {
   background-image: url('../img/mine.jpg');
   position: absolute;
   top: 100px;
+  overflow-y: auto;
 }
 footer {
   height: 100px;
   position: fixed;
   bottom: 10%;
-  background-color: red;
   margin-left: 350px;
   width: 600px;
 }
@@ -95,24 +97,36 @@ footer {
   border-radius: 4px;
   padding: 4px;
 }
+.friends {
+  margin-top: 10px;
+  height: 100%;
+  background-color: #fff;
+}
+.friends ul {
+  list-style: none;
+  line-height: 20px;
+}
+.friends img {
+  max-width: 50px;
+}
 /* Stile Main */
 .wrapper-chat {
   width: 500px;
   margin: auto;
+  margin-top: 20px;
 }
 .msg-user , .msg-friend {
-  width: 100px;
-  height: 60px;
+  width: 120px;
+  height: auto;
   border-radius: 4px;
   display: block;
   position: relative;
+  padding: 10px;
 }
 .msg-friend {
   background-color: #fff;
   padding: 10px;
   right: 0;
-
-
 }
 .msg-user {
   background-color: #D5F9BA;
@@ -142,4 +156,19 @@ footer {
   right: -6px;
   bottom: 0;
 
+}
+/* Stile Footer */
+.input-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+}
+.input-wrapper i {
+  font-size: 25px;
+}
+.chat-input {
+  width: 500px;
+  height: 40px;
+  border-radius: 6px;
 }
