--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ footer {
 .avatar img {
   max-width: 50px;
   margin-right: 5px;
+  border-radius: 50%;
 }
 .notify {
   display: flex;
@@ -108,6 +109,7 @@ footer {
 }
 .friends li {
   padding: 10px 10px;
+  cursor: pointer;
 }
 .friends img {
   max-width: 50px;
