al click sull'utente compare anche la chat corrispondente

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ footer {
   display: block;
   position: relative;
   padding: 10px;
+  margin-bottom: 10px;
 }
 .msg-friend {
   background-color: #fff;
