--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ header {
 main {
   margin-left: 350px;
   width: 600px;
-  height: calc(100% - 200px);
+  height: calc(100% - 180px);
   background-image: url('../img/mine.jpg');
   position: absolute;
   top: 100px;
@@ -172,10 +172,12 @@ font-size: 13px;
   background-color: #fff;
   padding: 10px;
   right: 0;
+  text-align: left;
 }
 .msg-user {
   background-color: #D5F9BA;
   margin-left: 70%;
+  text-align: right;
 }
 .msg-friend::before {
   content: '';
