--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,13 @@ input:focus {
   align-items: center;
   height: 100px;
   background-color: #EAEAEA;
+  padding: 0 5px;
+  border-right: 1px solid #6B7376;
 }
 .avatar {
   display: flex;
   align-items: center;
+  padding: 0 6px;
 }
 .btn-icons li a {
   padding: 8px;
@@ -142,9 +145,9 @@ input:focus {
 .last-seen {
 position: absolute;
 display: block;
-bottom: 0;
+bottom: 6px;
 padding: 2px;
-font-size: 13px;
+font-size: 11px;
 }
 .wrapper-chat {
   width: 550px;
@@ -160,13 +163,14 @@ font-size: 13px;
 
 .msg-user , .msg-friend {
   height: auto;
-  min-width: 40px;
-  width: 180px;
+  min-width: 20px;
+  max-width: 180px;
   border-radius: 4px;
   font-size: 15px;
   position: relative;
-  padding: 10px;
+  padding: 8px;
   margin-bottom: 10px;
+  word-wrap: break-word;
 }
 .msg-friend {
   background-color: #fff;
